[package]
name = "slate"
version = "1.0.2"
authors = ["Juan Hernández <juan.hernandez.babon@gmail.com>"]
description = "Manage your snippets from your command line."
homepage = "https://github.com/jhbabon/slate"
repository = "https://github.com/jhbabon/slate"
readme = "README.md"
keywords = ["slate", "snippets", "cli"]
license = "MIT"

[lib]
name = "slate"
path = "src/lib.rs"

[[bin]]
name = "slate"
path = "src/bin.rs"
doc = false

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
exec = "0.2.0"
regex = "0.1.69"

[dev-dependencies]
rand = "0.3"
